--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dev": "ts-node-dev --cls --rs --ignore-watch node_modules src/app.ts"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "pg": "^8.9.0",
     "pg-format": "^1.0.4"
